# Unlimited-Context-LLM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  RELEASING.md  SAFETY.md  SECURITY.md  USE_POLICY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  moat-seal.yml  publish.yml
aether_agent/: __init__.py  adapter.py  agent.py  auth.py  brains.py  cli.py  config.py  headless.py  install.ps1  install.sh  kernel.py  persona.py  profiles.py  protocol.py  repl.py  skills.py  slash.py  smoke.py  splash.py  statusbar.py  toolparse.py  tools.py  transport.py  web.py
aether_context/: __init__.py  _log.py  atlas_client.py  cli.py  config.py  context_pool.py  encoder.py  errors.py  local_llm.py  mpo.py  mpo_rerank.py  session.py  slice_loader.py  tokenizer.py  witness.py
bench/: api_eval.py  chain_recall.py  drift_vs_window.py
docs/: aethercloud.md  how-it-works.md  local-models.md
docs/benchmarks/: 2026-06-14-deepseek-v4-pro-session-eval.md
docs/benchmarks/artifacts/2026-06-14-deepseek-v4-pro/: RESULTS.md  api_eval_results.json  api_eval_series.csv
docs/plans/: 2026-06-14-native-terminal-mirror.md
docs/superpowers/plans/: 2026-06-14-api-eval-openrouter.md  2026-06-14-mpo-bolt-on-reranker.md  2026-06-14-mpo-context-chain.md
docs/superpowers/specs/: 2026-06-14-api-eval-openrouter-design.md  2026-06-14-mpo-bolt-on-reranker-design.md  2026-06-14-mpo-context-chain-design.md
examples/: coding_agent.py  long_build.md  quickstart.py
tests/: conftest.py  test_aether_agent.py  test_agent_config.py  test_api_eval.py  test_auth.py  test_brains.py  test_bridge.py  test_cli.py  test_cli_disk.py  test_cli_dispatch.py  test_cli_surface.py  test_config.py  test_context_pool.py  test_encoder.py  test_end_to_end.py  test_errors.py  test_local_llm.py  test_local_llm_openai.py  test_moat_seal.py  test_mpo.py  test_mpo_rerank.py  test_ollama_integration.py  test_profiles.py  test_protocol_lockstep.py  test_safety.py  test_session.py  test_session_fallback.py  test_slash.py  test_slice_loader.py  test_smoke.py  test_tokenizer.py  test_toolparse.py  test_transport.py  test_web_tools.py  test_witness.py
tests/fixtures/: bridge_conformance.json
tools/: moat_seal_check.py
